adding cuckatoo plugins

--- a/src/cuckoo_sys/plugins/CMakeLists.txt
+++ b/src/cuckoo_sys/plugins/CMakeLists.txt
@@ -18,23 +18,34 @@ set (CUDA_HOST_COMPILER_OVERRIDE $ENV{CUDA_HOST_COMPILER})
 set (BLAKE_2B "cuckoo/src/crypto/blake2b-ref.c")
 
 #cuckoo_miner (lean_cpu) sources
-set (LEAN_MINER_SOURCES cuckoo/src/crypto/siphash.h cuckoo/src/cuckoo/cuckoo.h cuckoo/src/cuckoo/lean.hpp cuckoo/src/cuckoo/lean.cpp ${BLAKE_2B})
+set (CUCKOO_LEAN_MINER_SOURCES cuckoo/src/crypto/siphash.h cuckoo/src/cuckoo/cuckoo.h cuckoo/src/cuckoo/lean.hpp cuckoo/src/cuckoo/lean.cpp ${BLAKE_2B})
 
-#matrix_miner sources (mean_cpu)
-set (MEAN_MINER_SOURCES cuckoo/src/crypto/siphash.h cuckoo/src/cuckoo/cuckoo.h cuckoo/src/cuckoo/mean.hpp cuckoo/src/cuckoo/mean.cpp ${BLAKE_2B})
+#cuckatoo_miner (lean_cpu) sources
+set (CUCKATOO_LEAN_MINER_SOURCES cuckoo/src/crypto/siphash.h cuckoo/src/cuckatoo/cuckatoo.h cuckoo/src/cuckatoo/lean.hpp cuckoo/src/cuckatoo/lean.cpp ${BLAKE_2B})
 
-#cuda miner source (mean_miner.cu)
-set (CUDA_MINER_SOURCES cuckoo/src/cuckoo/mean.cu ${BLAKE_2B} )
+#cuckoo mean miner sources (mean_cpu)
+set (CUCKOO_MEAN_MINER_SOURCES cuckoo/src/crypto/siphash.h cuckoo/src/cuckoo/cuckoo.h cuckoo/src/cuckoo/mean.hpp cuckoo/src/cuckoo/mean.cpp ${BLAKE_2B})
 
-###lean_cpu miner targets
+#cuckoo cuda miner source (mean_miner.cu)
+set (CUCKOO_CUDA_MINER_SOURCES cuckoo/src/cuckoo/mean.cu ${BLAKE_2B} )
+
+###cuckoo lean_cpu miner targets
 foreach(CUCKOO_SIZE 16 30 31)
-    add_library(cuckoo_lean_cpu_${CUCKOO_SIZE} SHARED ${LEAN_MINER_SOURCES})
+    add_library(cuckoo_lean_cpu_${CUCKOO_SIZE} SHARED ${CUCKOO_LEAN_MINER_SOURCES})
     #get edgebits
     math (EXPR EDGEBITS ${CUCKOO_SIZE}-1)
     set_target_properties(cuckoo_lean_cpu_${CUCKOO_SIZE} PROPERTIES COMPILE_FLAGS "${GPP_FLAGS} -DATOMIC -DEDGEBITS=${EDGEBITS}" PREFIX "" SUFFIX ".cuckooplugin" )
 endforeach(CUCKOO_SIZE)
 
-#matrix miner (mean_cpu) targets
+###cuckatoo lean_cpu miner targets
+foreach(CUCKATOO_SIZE 15 29 30)
+    add_library(cuckatoo_lean_cpu_${CUCKATOO_SIZE} SHARED ${CUCKATOO_LEAN_MINER_SOURCES})
+    #get edgebits
+    math (EXPR EDGEBITS ${CUCKATOO_SIZE})
+    set_target_properties(cuckatoo_lean_cpu_${CUCKATOO_SIZE} PROPERTIES COMPILE_FLAGS "${GPP_FLAGS} -DATOMIC -DEDGEBITS=${EDGEBITS}" PREFIX "" SUFFIX ".cuckooplugin" )
+endforeach(CUCKATOO_SIZE)
+
+#cuckoo mean (mean_cpu) targets
 foreach(CUCKOO_SIZE 16 30 31)
     if (CUCKOO_SIZE EQUAL 16)
        set (DXBITSFLAG "-DXBITS=0")
@@ -42,7 +53,7 @@ foreach(CUCKOO_SIZE 16 30 31)
        set (DXBITSFLAG "")
     endif()
 
-    add_library(cuckoo_mean_cpu_${CUCKOO_SIZE} SHARED ${MEAN_MINER_SOURCES})
+    add_library(cuckoo_mean_cpu_${CUCKOO_SIZE} SHARED ${CUCKOO_MEAN_MINER_SOURCES})
     #get edgebits
     math (EXPR EDGEBITS ${CUCKOO_SIZE}-1)
     set_target_properties(cuckoo_mean_cpu_${CUCKOO_SIZE} PROPERTIES COMPILE_FLAGS "${GPP_FLAGS} -mavx2 ${DXBITSFLAG} -DNSIPHASH=8 -DSAVEEDGES -DEDGEBITS=${EDGEBITS}" PREFIX "" SUFFIX ".cuckooplugin")
@@ -55,7 +66,7 @@ foreach(CUCKOO_SIZE 16 30 31)
     else()
        set (DXBITSFLAG "")
     endif()
-    add_library(cuckoo_mean_compat_cpu_${CUCKOO_SIZE} SHARED ${MEAN_MINER_SOURCES})
+    add_library(cuckoo_mean_compat_cpu_${CUCKOO_SIZE} SHARED ${CUCKOO_MEAN_MINER_SOURCES})
     #get edgebits
     math (EXPR EDGEBITS ${CUCKOO_SIZE}-1)
     set_target_properties(cuckoo_mean_compat_cpu_${CUCKOO_SIZE} PROPERTIES COMPILE_FLAGS "${GPP_FLAGS} ${DXBITSFLAG} -DNSIPHASH=1 -DSAVEEDGES -DEDGEBITS=${EDGEBITS}" PREFIX "" SUFFIX ".cuckooplugin")
@@ -70,7 +81,7 @@ if(BUILD_CUDA_PLUGINS)
         foreach(CUCKOO_SIZE 30 31)
             #get edgebits
             math (EXPR EDGEBITS ${CUCKOO_SIZE}-1)
-        cuda_add_library (cuckoo_cuda_${CUCKOO_SIZE} SHARED ${CUDA_MINER_SOURCES} OPTIONS "-DEDGEBITS=${EDGEBITS}")
+        cuda_add_library (cuckoo_cuda_${CUCKOO_SIZE} SHARED ${CUCKOO_CUDA_MINER_SOURCES} OPTIONS "-DEDGEBITS=${EDGEBITS}")
         set_target_properties(cuckoo_cuda_${CUCKOO_SIZE} PROPERTIES PREFIX "" SUFFIX ".cuckooplugin")
         endforeach(CUCKOO_SIZE)
     endif(CUDA_FOUND)
